# claude-quarterdeck

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  TASKS-v1.3.md  TASKS-v1.4.md  TASKS-v1.5.md  TASKS-v1.6.md  TASKS-v1.7.md  TASKS-v1.8.md  TASKS.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
crates/deck-core/: Cargo.toml
crates/deck-core/src/: ask.rs  discovery.rs  engine.rs  events.rs  hooks_config.rs  lib.rs  liveness.rs  naming.rs  registry.rs  traits.rs  usage.rs
crates/deck-core/tests/: discovery.rs  engine_ask.rs  engine_background.rs  engine_liveness.rs  engine_recovery.rs  engine_rename.rs  engine_transitions.rs  engine_worktimer.rs  events_parse.rs  events_spool.rs  hooks_config.rs  naming.rs  registry.rs
crates/deck-core/tests/common/: mod.rs
docs/: hooks-facts.md
e2e/: .gitignore  check-state.mjs  check-state2.mjs  package-lock.json  package.json  part-c-live.mjs  part-c-results.json  playwright.config.ts  real-app-smoke.mjs  stress-r5-tmp.mjs  tmp-repro-liveness.mjs  tmp-repro-receivedat.mjs  tmp-stress-r6.mjs
e2e/helpers/: popup.ts
e2e/tests/: ask-autosize.spec.ts  ask-flow.spec.ts  ask-form.spec.ts  background-busy.spec.ts  cursor.spec.ts  cyrillic.spec.ts  empty.spec.ts  focus.spec.ts  lamp-mode.spec.ts  lifecycle.spec.ts  perm-flow.spec.ts  rename.spec.ts  roomier-rows.spec.ts  settings.spec.ts  theme.spec.ts  token-stats.spec.ts  waiting-workflow.spec.ts  window-behavior.spec.ts  work-timer.spec.ts
fixtures/settings/: bom.json  crlf.json  foreign-hooks.json  malformed.json  plain.json
hooks/: quarterdeck-hook.ps1  quarterdeck-hook.sh
scripts/: demo-toasts.cmd  demo-toasts.exe.manifest  gen-icons.mjs  inject-events.mjs  live-smoke.md  mcp-client-test.mjs
skills/quarterdeck/: SKILL.md
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: demo_toasts.rs
src-tauri/icons/: icon.icns
src-tauri/src/: focus.rs  foreground.rs  ipc.rs  lib.rs  main.rs  mcp_server.rs  notify.rs  session_names.rs  settings.rs  tray.rs  util.rs  watcher.rs  windows.rs
src-tauri/tests/: hook_scripts.rs
ui/: ask.html  popup.html
ui/src/: ask.ts  dom.ts  format.ts  ipc-client.ts  ipc-contract.ts  mock-switcher.ts  popup.ts  styles.css  tauri-mock.ts
