[workspace]
members = ["crates/deck-core", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Philipp Gross"]
license = "MIT"
repository = "https://github.com/philippgross/quarterdeck"

[profile.release]
# Keep the packaged binary lean.
lto = true
opt-level = "s"
strip = true
