[package]
name = "quarterdeck"
description = "Quarterdeck: command deck for your Claude Code fleet."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "quarterdeck_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
deck-core = { path = "../crates/deck-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1"
notify = "8.2.0"
sysinfo = "0.39.5"
axum = "0.8.9"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Windows toast click routing (R-9.6): the same WinRT backend
# tauri-plugin-notification uses under the hood, but exposing `on_activated`.
[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"

# macOS toast click routing (R-9.6): mac-notification-sys exposes `wait_for_click`
# (returns which part of the toast the user clicked) — the plugin's desktop path
# has no click callback. Same backend `notify-rust` already uses under the hood,
# so it's already in the lockfile as a transitive dep.
[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
